--- a/css/layout.css
+++ b/css/layout.css
@@ -24,4 +24,48 @@
 
 /* Posititoning Classes */
 
+.border_right {
+  display: inline-block;
+  width: 33%;
+  padding-left: 10px;
+}
 
+#details {
+  width: 76%;
+  margin: auto;
+}
+
+#details .wrapper{
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.deals {
+  display: inline-block;
+  width: 32%;
+  margin-top: 10px;
+  clear: both;
+}
+
+div:first-child .deals {
+  position: relative;
+  margin-right: 4px;
+  margin-left: -2px;
+}
+
+div:last-child .deals {
+  margin-left: 4px;
+}
+
+.grass {
+  float: left;
+  width: 66%;
+  height: 36em;
+}
+
+.archive {
+  float: right;
+  width: 33%;
+  height: 36em;
+}
